<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/settings_samsung_dex">

		<MultiSelectListPreference
			android:name="@string/settings_immersive_apps"
			android:summary="@string/settings_immersive_apps_sum"
			android:title="@string/settings_immersive_apps"
			android:key="immersiveApps"
			android:dialogTitle="@string/settings_immersive_apps" />

		<CheckBoxPreference
			android:name="@string/settings_fix_keyboard"
			android:summary="@string/settings_fix_keyboard_sum"
			android:defaultValue="true"
			android:title="@string/settings_fix_keyboard"
			android:key="fixKeyboard" />

		<CheckBoxPreference
			android:name="@string/settings_fix_sbrowser"
			android:summary="@string/settings_fix_sbrowser_sum"
			android:defaultValue="true"
			android:title="@string/settings_fix_sbrowser"
			android:key="fixSBrowser" />

		<CheckBoxPreference
			android:name="@string/settings_fix_weather"
			android:summary="@string/settings_fix_weather_sum"
			android:defaultValue="true"
			android:title="@string/settings_fix_weather"
			android:key="fixWeather" />

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/settings_samsung_dex_taskbar">

		<CheckBoxPreference
			android:name="@string/settings_fix_taskbar"
			android:summary="@string/settings_fix_taskbar_sum"
			android:defaultValue="true"
			android:title="@string/settings_fix_taskbar"
			android:key="fixTaskbar" />

		<CheckBoxPreference
			android:name="@string/settings_hide_dex_logo"
			android:summary="@string/settings_hide_dex_logo_sum"
			android:defaultValue="true"
			android:title="@string/settings_hide_dex_logo"
			android:key="hideDexLogo" />

		<CheckBoxPreference
			android:name="@string/settings_hide_tasks_button"
			android:summary="@string/settings_hide_tasks_button_sum"
			android:defaultValue="false"
			android:title="@string/settings_hide_tasks_button"
			android:key="hideTasksButton" />

		<CheckBoxPreference
			android:name="@string/settings_hide_nosim_icon"
			android:summary="@string/settings_hide_nosim_icon_sum"
			android:defaultValue="true"
			android:title="@string/settings_hide_nosim_icon"
			android:key="hideNoSIMIcon" />

		<CheckBoxPreference
			android:name="@string/settings_hide_app_overflow_buttons"
			android:summary="@string/settings_hide_app_overflow_buttons_sum"
			android:defaultValue="true"
			android:title="@string/settings_hide_app_overflow_buttons"
			android:key="hideAppOverflowButtons" />

		<CheckBoxPreference
			android:name="@string/settings_hide_statusbar_separators"
			android:summary="@string/settings_hide_statusbar_separators_sum"
			android:defaultValue="false"
			android:title="@string/settings_hide_statusbar_separators"
			android:key="hideStatusBarSeparators" />

	</PreferenceCategory>

</PreferenceScreen>